# brain-parcellation

./: .env  .env.3090  .env.dev  .gitignore  LICENSE  README.md  System_Design.md  ad  bentofile.yaml  boosters_manager.py  brain-parcellation-systemd  create_directories.sh  docker-compose-dev.yml  docker-compose.yml  docker-compose_bak.yml  funboost_cli_user.py  funboost_config.py  funboost_mq_setup.py  nb_log_config.py  orthanc.json  pyproject.toml  pyproject_http.toml  requirements.txt  start.sh  system_analysis.md
backend/: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  utils.py
backend/api/routes/: __init__.py  patient.py  project.py  study.py  text_report.py
backend/app/: backup_implementation.py  database.py  main.py  minio_client.py  models.py  routers.py  schemas.py  server.py  service.py  tasks.py
backend/app/api/routes/: base.py  patient.py  project_study.py
backend/app/config/: constants.py  deps.py
backend/app/core/: __init__.py  config.py  paginate.py
backend/app/crud/: __init__.py  backup_config.py  backup_job.py  backup_object.py  base.py  bucket.py  file.py  object_retention.py  object_version.py  retention_policy.py  tag.py
backend/app/find/: routers.py  urls.py
backend/app/listen/: deps.py  routers.py  schemas.py  service.py  urls.py
backend/app/model/: __init__.py  base.py  query.py  study.py
backend/app/models/: __init__.py  backup_config.py  backup_job.py  backup_object.py  base.py  bucket.py  file.py  object_retention.py  object_version.py  retention_policy.py  tag.py
backend/app/rerun/: routers.py  service.py  urls.py
backend/app/routers/: backup_config.py  backup_job.py  backup_jobs.py  backup_object.py  backup_objects.py  bucket.py  buckets.py  file.py  files.py  object_retention.py  object_retentions.py  object_version.py  object_versions.py  retention_policie.py  retention_policies.py  tag.py  tags.py
backend/app/routers/series/: __init__.py  __main__.py
backend/app/schema/: patient.py  project.py  project_study.py  study.py  text_report.py
backend/app/schemas/: __init__.py  backup_config.py  backup_job.py  backup_object.py  bucket.py  file.py  object_retention.py  object_version.py  retention_policy.py  series.py  tag.py
backend/app/series/: deps.py  routers.py  schemas.py  urls.py
backend/app/services/: __init__.py  backup_service.py
backend/app/study/: deps.py  routers.py  urls.py
backend/app/sync/: deps.py  exceptions.py  model.py  routers.py  schemas.py  service.py  urls.py
backend/core/: config.py  db.py
backend/model/: ai_model.py  file.py  patient.py  project.py  series.py
backend/schema/: base.py
backend/tests/: test_backup_config.py
code/: log.py  main.py  main_1012.py  main_bak.py  main_ct.py  main_tf28.py  main_tf28_code.py  main_tf28_profile.py  review_predict.py  review_predict_1212.py  review_predict_bak.py  review_predict_tf28.py  review_predict_tf28_colab.py  review_predict_tf28_profiler.py  test.py  test_WhiteMatter.py  utils_parcellation.py  utils_parcellation_profiler.py
code_ai/: __init__.py  celery_app.py  celery_config.py  main.py  main_json.py  model.py  server.py  service.py  service1.py  utils_database.py  utils_infarct.py  utils_inference.py  utils_parcellation.py  utils_resample.py  utils_synthseg.py  utils_synthsegOnnx.py  utils_voxel.py
code_tf28/: main_tf28.py  main_tf28_profile.py  review_predict_tf28_colab.py  tf2_14requirements.txt  utils_parcellation.py  utils_parcellation_profiler.py  utils_parcellation_tf28.py
test/: Orthanc_dicom.py  Suntory_4_pipeline_flirt.py  Suntory_5_pipeline_flirt_apply.py  adni_run_pip.py  delete_LOCAL_DB.py  delete_dicom-seg_test.py  download_dicom-test.py  download_dicom_matt.py  find_task.py  main.py  orthanc_study_download_path.py  selcet_LOCAL_DB.py  tes_CMB.py  tes_RABBITMQ.py  tes_celey_mut_task.py  tes_celey_result.py  tes_celey_task.py  tes_celey_task01.py  tes_celey_whm.py  tes_dicom2nii_and_synthseg_task.py  tes_dicom2nii_task.py  tes_funboot.py  (+29 more)
(+172 files in other folders)
