[project]
name = "shh_ai_pyton"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "brainextractor>=0.2.2",
    "charset-normalizer==3.1.0",
    "db-libs>=1.1",
    "dotenv>=0.9.9",
    "funboost==48.4",
    "google>=3.0.0",
    "google-pasta>=0.2.0",
    "httpx==0.28.1",
    "markupsafe==2.1.5",
    "matplotlib==3.8.2",
    "nibabel==5.3.2",
    "numba==0.61.0",
    "numpy==1.26.3",
    "opencv-python==4.7.0.72",
    "openpyxl>=3.1.5",
    "orjson==3.10.15",
    "pandas==2.1.3",
    "protobuf==3.20.*",
    "psycopg2-binary==2.9.9",
    "pydantic>=2.10.6",
    "pydicom==2.4.3",
    "pydicom-seg>=0.4.1",
    "pyjpegls>=1.4.0",
    "pynvml>=12.0.0",
    "pyorthanc[all]>=1.20.0",
    "redis==5.2.1",
    "scikit-image==0.25.2",
    "simpleitk==2.4.1",
    "sqlalchemy==2.0.38",
    "tensorflow==2.14.0",
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "torchvision==0.18.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true


[tool.uv]
extra-index-url = ["https://pypi.org/simple"]


[tool.uv.sources]
torch= { index = "pytorch" }
torchvision= { index = "pytorch" }
torchaudio= { index = "pytorch" }
