[project]
name = "shh_ai_pyton"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "brainextractor>=0.2.2",
    "celery==5.4.0",
    "db-libs>=1.1",
    "funboost==48.4",
    "httpx==0.28.1",
    "matplotlib==3.8.2",
    "nibabel==5.3.2",
    "numba==0.61.0",
    "numpy==1.26.0",
    "opencv-python==4.7.0.72",
    "orjson==3.10.15",
    "pandas==2.1.3",
    "psycopg2-binary==2.9.9",
    "pydicom==2.4.3",
    "pydicom-seg>=0.4.1",
    "pyorthanc[all]>=1.20.0",
    "redis==5.2.1",
    "scikit-image==0.25.2",
    "simpleitk==2.4.1",
    "sqlalchemy==2.0.38",
    "tqdm==4.67.1",
]
