[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=3.4.3",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "minio>=7.2.15",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
